# stm32_hal_template

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  baselibc.cmake  hal.cmake  readme.md  stm32.cmake  stm32_flash.ld.in
drivers/: CMakeLists.txt  dsp.cmake  hal_defines.cmake  hal_stm32f1xx.cmake  ll_stm32f1xx.cmake
drivers/CMSIS/Device/ST/STM32F1xx/Source/Templates/gcc/: startup_stm32f103xb.s
drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal.h  stm32f1xx_hal_conf.h
src/: gpio.c  init.c  main.c  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.c  stm32f1xx_it.h  syscalls.c
src/clocker/: clock.c  clock.h
startup/: startup_stm32f10x_md.S
